--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ layout: home
 	  <h3>I'm <strong>{{ site.author }}</strong>, a Data Scientist.</h3>
 		<h3>I believe that data will afford us a more just world.</h3>
 	  <h3>I love all things computer science, math, and design.</h3>
-	  <h3>Have a look at some of the things I am doing <a href="{{ site.baseurl }}projects.html"> projects</a>.</h3>
-		<h3>I am also sharing some techniques I use in the <a href="{{ site.baseurl }}blog.html"> blog</a>.</h3>
+	  <h3>Have a look at some of the <a href="{{ site.baseurl }}projects.html"> work</a> I am doing.</h3>
+		<h3>I am also sharing techniques I use in the <a href="{{ site.baseurl }}blog.html"> blog</a>.</h3>
 	  <h3>For more check out my academic &amp; professional <a href="http://danlarson.io/assets/PDF/Resume.pdf">Resume</a>.</h3>
 	  <h3>Contact me at <a href="http://twitter.com/{{ site.twitter }}">@{{ site.twitter }}</a> or by <a href="mailto:{{ site.email }}">email</a>.</h3>
 	  {% include social.html %}
