--- a/photo-gallary.html
+++ b/photo-gallary.html
@@ -5,11 +5,12 @@ images:
   - image_path: http://danlarson.io/static/img/MaternityLeave.png
     title: Maternity leave by country
     link: https://public.tableau.com/profile/datadanlarson#!/vizhome/PerentalLeaveintheOECD/Dashboard1
+    - image_path: http://danlarson.io/static/img/NikeFactory.png
+      title: Nike Factories
+      link: https://public.tableau.com/profile/datadanlarson#!/vizhome/PerentalLeaveintheOECD/Dashboard1
 
 ---
 
-
-...
 <ul class="photo-gallery">
   {% for image in page.images %}
     <li><img src="{{ image.image_path }}" alt="{{ image.title}}" link="{{image.link}}"/></li>
