--- a/photo-gallary.html
+++ b/photo-gallary.html
@@ -4,13 +4,20 @@ title: Tableau
 images:
   - image_path: http://danlarson.io/static/img/MaternityLeave.png
     title: Maternity leave by country
+    link: https://public.tableau.com/profile/datadanlarson#!/vizhome/PerentalLeaveintheOECD/Dashboard1
   - image_path: http://danlarson.io/static/img/NikeFactory.png
     title: Nike Factory
+    link:https://public.tableau.com/profile/datadanlarson#!/vizhome/NikeManufacturingdashboard/Dashboard1
+  - image_path: http://danlarson.io/static/img/BigMac.png
+    title: Big Mac
+    link:https://public.tableau.com/profile/datadanlarson#!/vizhome/BigMacIndex_27/Dashboard1
 
 ---
 
 <ul class="photo-gallery">
   {% for image in page.images %}
-    <li><img src="{{ image.image_path }}" alt="{{ image.title}}"/></li>
+    <a href="{{image.link}}">
+      <li><img src="{{ image.image_path }}" alt="{{ image.title}}"/></li>
+    </a>
   {% endfor %}
 </ul>
