--- a/photo-gallary.html
+++ b/photo-gallary.html
@@ -16,8 +16,10 @@ images:
 
 <ul class="photo-gallery">
   {% for image in page.images %}
-    <a href="{{image.link}}">
-      <li><img src="{{ image.image_path }}" alt="{{ image.title}}"/></li>
-    </a>
+      <li>
+        <a href="{{image.link}}">
+          <img src="{{ image.image_path }}" alt="{{ image.title}}"/>
+        </a>
+      </li>
   {% endfor %}
 </ul>
